# catala-format

./: .gitignore  .gitmodules  .ocamlformat  CHANGELOG.md  Cargo.toml  README.md  catala-format.opam  catala.ncl  catala.scm  dune  dune-project  make-wrapper.sh  script.template.sh
.cargo/: config.toml
emacs/: catala-format.el
src/: dune  main.ml  main_template.ml
tests/: clean.sh  generate.sh  run_test.sh
tests/check_line/: check_line.ml  dune
tests/en/: date_en.catala_en.result  date_internal.catala_en.result  empty_decls.catala_en  empty_decls.catala_en.result  empty_scope.catala_en.result  nsw_art_union.catala_en.result  nsw_charity_housie.catala_en.result  nsw_club_bingo.catala_en.result  nsw_draw_lottery.catala_en.result  nsw_no_draw_lottery.catala_en.result  nsw_progressive_lottery.catala_en.result  nsw_social_housie.catala_en.result  section_121.catala_en  section_121.catala_en.result  section_132.catala_en.result  section_152.catala_en.result  spurious_whitespace_law_block.catala_en  spurious_whitespace_law_block.catala_en.result  stdlib_en.catala_en.result  test_nsw_art_union.catala_en.result  test_nsw_charity_housie.catala_en.result  test_nsw_club_bingo.catala_en.result  test_nsw_draw_lottery.catala_en.result  test_nsw_no_draw_lottery.catala_en.result  test_nsw_progressive_lottery.catala_en.result  test_section_121.catala_en.result  test_tutorial.catala_en.result  tutorial_en.catala_en.result  tutorial_end_2_1.catala_en  tutorial_end_2_2.catala_en.result  tutorial_end_2_3.catala_en  tutorial_end_2_3.catala_en.result  tutorial_end_2_4.catala_en  tutorial_end_2_4.catala_en.result
tests/fr/: Allocations_familiales.catala_fr.result  Bmaf.catala_fr.result  Smic.catala_fr.result  archives.catala_fr  archives.catala_fr.result  arrete_2019-09-27.catala_fr  arrete_2019-09-27.catala_fr.result  autres_codes.catala_fr.result  autres_sources.catala_fr.result  benefices_industriels_commerciaux.catala_fr.result  benefices_non_commerciaux.catala_fr.result  cgi_revenus.catala_fr  cgi_revenus.catala_fr.result  code_construction_legislatif.catala_fr.result  code_construction_legislatif2.catala_fr  code_construction_legislatif2.catala_fr.result  code_construction_reglementaire.catala_fr.result  code_sécurité_sociale.catala_fr.result  date_fr.catala_fr.result  decrets_divers.catala_fr.result  deficits_anterieurs.catala_fr.result  droit_successions.catala_fr.result  epilogue.catala_fr.result  interface.catala_fr.result  modèle_convention_fiscale_ocde.catala_fr.result  nombre_de_parts.catala_fr.result  prologue.catala_fr.result  prorata.catala_fr.result  securite_sociale_D.catala_fr.result  securite_sociale_L.catala_fr  securite_sociale_L.catala_fr.result  securite_sociale_R.catala_fr.result  stdlib_fr.catala_fr.result  sécurité_sociale_L.catala_fr.result  sécurité_sociale_R.catala_fr.result  test_but_replace.catala_fr  test_tutoriel.catala_fr.result  tests_allocations_familiales.catala_fr.result  tests_calcul_al_accession_propriete.catala_fr.result  tests_calcul_al_locatif.catala_fr.result  (+12 more)
