opam-version: "2.0"
version: "1.1.0"
maintainer: "vincent.botbol@inria.fr"
authors: [ "Vincent Botbol" ]

homepage: "https://github.com/CatalaLang/catala-format"
bug-reports: "https://github.com/CatalaLang/catala-format"
dev-repo: "git+https://github.com/CatalaLang/catala-format.git"

license: "Apache-2.0"
depends: [
  "ocaml"
  "dune"
  "cmdliner"
  "lwt" {with-test}
  "topiary" {= "0.5.1"}
  "conf-c++"
]

build:[
  "dune" "build"
  "-p" name
  "-j" jobs
  "@install"
]

synopsis: "A formatter for Catala based on the Topiary universal formatting engine"
description: """
A formatter for Catala based on the Topiary universal formatting engine.

Topiary repository: https://github.com/tweag/topiary
"""
